@startuml
    namespace com.hack23.cia.web.impl.ui.application.views.admin.system.pagemode {

        class AdminApplicationEventsChartsPageModContentFactoryImpl [[AdminApplicationEventsChartsPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        class AdminApplicationConfigurationPageModContentFactoryImpl [[AdminApplicationConfigurationPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
        }

        class AdminApplicationSessionPageModContentFactoryImpl [[AdminApplicationSessionPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        class AdminLanguageContentPageModContentFactoryImpl [[AdminLanguageContentPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
        }

        class AdminApplicationEventsPageModContentFactoryImpl [[AdminApplicationEventsPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        class AdminCountryPageModContentFactoryImpl [[AdminCountryPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
        }

        class EmailPageModContentFactoryImpl [[EmailPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
        }

        class AdminAgencyPageModContentFactoryImpl [[AdminAgencyPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
        }

        class AdminPortalPageModContentFactoryImpl [[AdminPortalPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
        }

        class AdminLanguagePageModContentFactoryImpl [[AdminLanguagePageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
        }

        class AdminUserAccountPageModContentFactoryImpl [[AdminUserAccountPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
        }

        abstract class AbstractAdminSystemPageModContentFactoryImpl [[AbstractAdminSystemPageModContentFactoryImpl.html]] {
            #getPagingUtil(): PagingUtil
            +matches(String, String): boolean
        }

        class AdminMonitoringPageModContentFactoryImpl [[AdminMonitoringPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
        }

        class AdminApplicationSessionChartsPageModContentFactoryImpl [[AdminApplicationSessionChartsPageModContentFactoryImpl.html]] {
            {static} +NAME: String
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminApplicationEventsChartsPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminApplicationConfigurationPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminApplicationSessionPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminLanguageContentPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminApplicationEventsPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminCountryPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- EmailPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminAgencyPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminPortalPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminLanguagePageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminUserAccountPageModContentFactoryImpl
        com.hack23.cia.web.impl.ui.application.views.common.pagemode.AbstractBasicPageModContentFactoryImpl <|-- AbstractAdminSystemPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminMonitoringPageModContentFactoryImpl
        AbstractAdminSystemPageModContentFactoryImpl <|-- AdminApplicationSessionChartsPageModContentFactoryImpl
    }

    namespace com.hack23.cia.web.impl.ui.application.views.common.pagemode {
        abstract class AbstractBasicPageModContentFactoryImpl [[../../../common/pagemode/AbstractBasicPageModContentFactoryImpl.html]]
    }

    center footer UMLDoclet 2.0.12, PlantUML 1.2020.16
@enduml
